--- a/classTo9/index.html
+++ b/classTo9/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>SH-DQD</title>
     <link rel="stylesheet" href="dist/css/style.min.css">
 </head>
 <body>
